# scheme-for-max

./: .gitignore  .make-release.py.swl  README.md  RELEASES.md  make-release.py  s4m_iain_log.txt  uninstall.py
s4m/: .s4m.c.swl  .vimrc  CMakeLists.txt  README.txt  repl.scm  s4m-array.h  s4m-carray.h  s4m-grid.c  s4m-grid.h  s4m-helpers.c  s4m-helpers.h  s4m-msp-backup.c  s4m-msp.c  s4m-msp.h  s4m.c  s4m.c.back  s4m.vcxproj  s4m~.vim  s7.c  s7.h  sexp-test-2.scm  sexp-test-3.scm  sexp-test.scm
s4m/archive/: s4m_time_schedule_attempts.c
s4m/patchers/: 2020-05-07.maxpat  array-test.maxpat  array_fuzzer.maxpat  clock_test.maxpat  fft-test-polar.maxpat  fft-test.maxpat  gc-tests.maxpat  gridtest.maxpat  gridtest.scm  live-test.maxpat  matrix_ui.maxpat  max-array-tests.scm  pfft-subpatch-ref.maxpat  pfft-subpatch.maxpat  pfft-test.maxpat  s4m_msp.maxpat  s4m_msp_filter.maxpat  s4m_msp_load_test.maxpat  sched_scratchpad.maxpat  table-io-tests-1.maxpat  table-test.maxpat  thread-reset-test-1.scm  thread-reset-test-2.scm  thread-reset-test-clocker.scm  thread_loadtest.maxpat  thread_reset_test.maxpat
s4m/s4m.xcodeproj/: project.pbxproj
s4m/s7-previous/: s7.c
s4m/scm/: .s4m.scm.swl  .schedule.scm.swk  .schedule.scm.swl  array_tests.scm  carray_tests.scm  cload.scm  clock_test.scm  libc.scm  libm.scm  live-api.scm  live-test.scm  loop.scm  lowpass_filter.scm  pass.scm  r7rs.scm  reactive.scm  repl  s4m-msp-test.scm  s4m-msp.scm  s4m-score-demo.scm  s4m-score.scm  s4m.scm  s74.scm  schedule.scm  scratch.scm  spectral-1.scm  spectral-centroid.scm  stuff.scm  utilities.scm  (+1 more)
(+177 files in other folders)
